--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <header class="l-header" id="header">
         <div class="navbar container flex">
             <div class="brand">
-                <a href="#"><img src="assests/img/logo.png" alt="Djey Coiffure"></a>
+                <a href="#"><img src="assests/img/logo.svg" alt="Djey Coiffure"></a>
             </div>
             <div class="nav" id="nav">
                 <ul class="nav__menu">
@@ -70,7 +70,7 @@
                     <div class="about__detail">
                         <div class="about__detail__content">
                             <div class="about__img">
-                                <img src="assests/img/djenny.jpg" alt="À propos de Djey Coiffure">
+                                <img src="assests/img/about-img.jpg" alt="À propos de Djey Coiffure">
                             </div>
                             <div class="about__description">
                                 <p>Je m'appelle Djenny ❤️, passionnée par la coiffure depuis mon plus jeune âge ✨💇‍♀️.</p>
@@ -325,28 +325,28 @@
                                   </div>
                                   <div class="gallery__list__img row container">
                                     <div class="gallery__img">
-                                      <img src="assests/img/djenny.jpg" alt="">
+                                      <img src="assests/img/about-img.jpg" alt="">
                                     </div>
                                     <div class="gallery__img">
-                                      <img src="assests/img/djenny.jpg" alt="">
+                                      <img src="assests/img/about-img.jpg" alt="">
                                     </div>
                                     <div class="gallery__img">
-                                      <img src="assests/img/djenny.jpg" alt="">
+                                      <img src="assests/img/about-img.jpg" alt="">
                                     </div>
                                     <div class="gallery__img">
-                                      <img src="assests/img/djenny.jpg" alt="">
+                                      <img src="assests/img/about-img.jpg" alt="">
                                     </div>
                                     <div class="gallery__img">
-                                      <img src="assests/img/djenny.jpg" alt="">
+                                      <img src="assests/img/about-img.jpg" alt="">
                                     </div>
                                     <div class="gallery__img">
-                                      <img src="assests/img/djenny.jpg" alt="">
+                                      <img src="assests/img/about-img.jpg" alt="">
                                     </div>
                                     <div class="gallery__img">
-                                      <img src="assests/img/djenny.jpg" alt="">
+                                      <img src="assests/img/about-img.jpg" alt="">
                                     </div>
                                     <div class="gallery__img">
-                                      <img src="assests/img/djenny.jpg" alt="">
+                                      <img src="assests/img/about-img.jpg" alt="">
                                     </div>
                                   </div>
                                   <button class="btn">voir plus</button>
